<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView

        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/gray_one"
        app:cardCornerRadius="@dimen/tickets_8dp"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_16sp"
                android:layout_marginTop="21dp"
                android:fontFamily="@font/bold"
                android:lineHeight="26.4dp"
                android:text="@string/stub_price"
                android:textColor="@color/white"
                android:textFontWeight="600"
                android:textSize="22sp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/tickets_16dp"
                android:layout_marginVertical="@dimen/tickets_16dp"
                android:layout_marginStart="@dimen/tickets_8dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/special_orange_placeholder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/date_departure" />

                <TextView
                    android:id="@+id/date_departure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tickets_8dp"
                    android:fontFamily="@font/light_italic"
                    android:lineHeight="16.8dp"
                    android:text="@string/stub_dep_time"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view_div"
                    android:layout_width="10dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/tickets_8dp"
                    android:background="@color/grey_six"
                    app:layout_constraintBottom_toBottomOf="@+id/date_departure"
                    app:layout_constraintStart_toEndOf="@+id/date_departure"
                    app:layout_constraintTop_toTopOf="@+id/date_departure" />

                <TextView
                    android:id="@+id/date_arrival"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tickets_8dp"
                    android:fontFamily="@font/light_italic"
                    android:lineHeight="16.8dp"
                    android:text="@string/stub_arr_time"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/view_div"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/airport_departure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/light_italic"
                    android:lineHeight="16.8dp"
                    android:text="@string/stub_airport_dep"
                    android:textColor="@color/grey_six"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/date_departure"
                    app:layout_constraintTop_toBottomOf="@+id/date_departure" />

                <View
                    android:id="@+id/view_div_2"
                    android:layout_width="10dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="@dimen/tickets_8dp"
                    android:background="@color/grey_six"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/date_departure"
                    app:layout_constraintTop_toBottomOf="@+id/date_departure" />


                <TextView
                    android:id="@+id/airport_arrival"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/light_italic"
                    android:lineHeight="16.8dp"
                    android:text="@string/stub_airport_arr"
                    android:textColor="@color/grey_six"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/date_arrival"
                    app:layout_constraintTop_toBottomOf="@+id/date_departure" />

                <TextView
                    android:id="@+id/time_to_fly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tickets_16dp"
                    android:fontFamily="@font/regular"
                    android:lineHeight="16.8dp"
                    android:text="@string/stub_flight_time"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/date_arrival"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/has_transfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/regular"
                    android:lineHeight="16.8dp"
                    android:text="@string/transfer"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/time_to_fly"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.cardview.widget.CardView
        android:id="@+id/badge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/special_blue"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/badge_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/tickets_10dp"
            android:layout_marginVertical="2dp"
            android:fontFamily="@font/bold_italic"
            android:text="Самый удобный"
            android:textColor="@color/white"
            tools:ignore="HardcodedText" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />


</androidx.constraintlayout.widget.ConstraintLayout>

